--- a/.enyoconfig
+++ b/.enyoconfig
@@ -1,1 +1,83 @@
-{"user":{},"defaults":{"libraries":["enyo","layout","canvas","svg","moonstone","onyx","spotlight","enyo-webos","enyo-cordova","enyo-ilib"],"sources":{"enyo":"https://github.com/enyojs/enyo.git#2.6.0-dev","layout":"https://github.com/enyojs/layout.git#2.6.0-dev","canvas":"https://github.com/enyojs/canvas.git#2.6.0-dev","svg":"https://github.com/enyojs/svg.git#master","moonstone":"https://github.com/enyojs/moonstone.git#2.6.0-dev","onyx":"https://github.com/enyojs/onyx.git#2.6.0-dev","spotlight":"https://github.com/enyojs/spotlight.git#2.6.0-dev","enyo-webos":"https://github.com/enyojs/enyo-webos.git#2.6.0-dev","enyo-cordova":"https://github.com/enyojs/enyo-cordova.git#2.6.0-dev","enyo-ilib":"https://github.com/enyojs/enyo-ilib.git#2.6.0-dev"},"link":[],"linkAllLibs":false,"libDir":"lib","interactive":true,"copyConfig":false,"nameMap":{},"paths":["lib"]}}
+{
+  "title": "bootplate-moonstone-modules",
+  "name": "bootplate-moonstone-modules",
+  "libDir": "lib",
+  "paths": [
+    "lib"
+  ],
+  "libraries": [
+    "enyo",
+    "layout",
+    "canvas",
+    "svg",
+    "moonstone",
+    "onyx",
+    "spotlight",
+    "enyo-webos",
+    "enyo-cordova",
+    "enyo-ilib",
+    "moonstone-extra"
+  ],
+  "sources": {
+    "enyo": "https://github.com/enyojs/enyo.git",
+    "layout": "https://github.com/enyojs/layout.git",
+    "canvas": "https://github.com/enyojs/canvas.git",
+    "svg": "https://github.com/enyojs/svg.git",
+    "moonstone": "https://github.com/enyojs/moonstone.git",
+    "onyx": "https://github.com/enyojs/onyx.git",
+    "spotlight": "https://github.com/enyojs/spotlight.git",
+    "enyo-webos": "https://github.com/enyojs/enyo-webos.git",
+    "enyo-cordova": "https://github.com/enyojs/enyo-cordova.git",
+    "enyo-ilib": "https://github.com/enyojs/enyo-ilib.git",
+    "moonstone-extra": "https://github.com/enyojs/moonstone-extra.git"
+  },
+  "targets": {
+    "enyo": "2.6.0-dev",
+    "layout": "2.6.0-dev",
+    "canvas": "2.6.0-dev",
+    "svg": "master",
+    "moonstone": "2.6.0-dev",
+    "onyx": "2.6.0-dev",
+    "spotlight": "2.6.0-dev",
+    "enyo-webos": "2.6.0-dev",
+    "enyo-ilib": "2.6.0-dev",
+    "enyo-cordova": "2.6.0-dev",
+    "moonstone-extra": "master"
+  },
+  "links": [],
+  "linkAllLibs": false,
+  "logLevel": "warn",
+  "production": false,
+  "devMode": true,
+  "cache": true,
+  "resetCache": false,
+  "trustCache": false,
+  "cacheFile": ".enyocache",
+  "clean": false,
+  "sourceMaps": true,
+  "externals": true,
+  "strict": false,
+  "skip": [],
+  "library": false,
+  "wip": false,
+  "outdir": "dist",
+  "outfile": "index.html",
+  "lessPlugins": [],
+  "assetRoots": [],
+  "lessOnlyLess": false,
+  "minifyCss": false,
+  "inlineCss": true,
+  "outCssFile": "output.css",
+  "outJsFile": "output.js",
+  "inlineJs": true,
+  "templateIndex": "",
+  "watch": false,
+  "watchPaths": [],
+  "polling": false,
+  "pollingInterval": 100,
+  "headScripts": [],
+  "tailScripts": [],
+  "promisePolyfill": false,
+  "styleOnly": false,
+  "lessVars": []
+}
